--- a/src/app/percentage/percentage.component.css
+++ b/src/app/percentage/percentage.component.css
@@ -4,12 +4,15 @@
   display: inline-flex;
 }
 .percentage{
-  width:50%;
+  width:40%;
   height:auto;
+  margin: 1rem;
 }
 mat-card{
     width:100%;
     height: 100%;
+    background-color: aquamarine;
+
 }
 mat-card-content{
   font-size: 5rem;
