--- a/src/app/percentage/percentage.component.html
+++ b/src/app/percentage/percentage.component.html
@@ -11,7 +11,7 @@
   <mat-card class="example-card">
 
     <mat-card-content>
-      {{numOfUsers/100 * 100}}%
+      <p>{{selectedName}}</p>
     </mat-card-content>
   </mat-card>
 </div>
