--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
-<app-piechart></app-piechart>
-<app-percentage></app-percentage>
+
+<div class="chart-part">
+  <app-piechart></app-piechart>
+  <app-percentage></app-percentage>
+</div>
 <app-data-table></app-data-table>
 <router-outlet></router-outlet>
