--- a/src/app/data-table/data-table.component.html
+++ b/src/app/data-table/data-table.component.html
@@ -1,6 +1,6 @@
-<mat-accordion class="example-headers-align" multi >
+<mat-accordion class="example-headers-align"  >
   <mat-expansion-panel  *ngFor="let user of users; let i= index;" >
-    <mat-expansion-panel-header (click)="submitData(user.name, user.username, user.email)">
+    <mat-expansion-panel-header (click)="submitData(user)">
       <mat-panel-title>
       {{i+1}} .{{user.name}}
       </mat-panel-title>
@@ -11,7 +11,7 @@
 
     </mat-expansion-panel-header>
     <mat-list role="list">
-      <mat-list-item  role="listitem">Name: <span class="spacer" value="h" #id>h</span> {{user.name}}</mat-list-item>
+      <mat-list-item  role="listitem">Name: <span class="spacer"></span> {{user.name}}</mat-list-item>
       <mat-list-item role="listitem">User Name: <span class="spacer"></span> {{user.username}}</mat-list-item>
       <mat-list-item role="listitem">City: <span class="spacer"></span>{{user.address.city}}</mat-list-item>
       <mat-list-item role="listitem">PinCode: <span class="spacer"></span> {{user.address.zipcode}}</mat-list-item>
