--- a/src/app/percentage/percentage.component.css
+++ b/src/app/percentage/percentage.component.css
@@ -4,20 +4,67 @@
   display: inline-flex;
 }
 .percentage{
-  width:40%;
-  height:auto;
-  margin: 1rem;
+  width: 40%;
+  height: 50%;
+  margin: 2rem;
 }
 mat-card{
     width:100%;
-    height: 100%;
+    height: 10rem;
     background-color: aquamarine;
+    margin-bottom: 1rem;
 
 }
 mat-card-content{
-  font-size: 5rem;
+  font-size: 3rem;
+  padding-top: 5rem;
   font-weight: 800;
   text-align: center;
-padding-top: 30%;
- margin: auto;
+}
+
+.user{
+  display: inline-flex;
+  margin-top: 2rem;
+}
+.icon{
+  width: 12rem;
+  height: 100%;
+  border: 2px solid black;
+}
+mat-icon{
+  font-size: 7rem;
+
+}
+.data{
+  width: 100%;
+  height: 100%;
+  margin-left: 2rem;
+}
+
+@media (max-width: 900px){
+  .container{
+    display: block;
+  }
+  .percentage{
+    width: 100%;
+    height: 50%;
+  }
+  mat-card{
+      width:100%;
+      height: 10rem;
+      background-color: aquamarine;
+      margin-bottom: 1rem;
+
+  }
+  mat-card-content{
+    font-size: 3rem;
+    padding-top: 5rem;
+    font-weight: 800;
+    text-align: center;
+  }
+
+  .user{
+    display: inline-flex;
+    margin-top: 2rem;
+  }
 }
